<resources>
    <string name="app_name">Water Reservoir</string>
    <string name="txt_wlcm">Welcome</string>
    <string name="TXT_LOGIN">LOGIN</string>
    <string name="txt_inputtext">Input Your Email</string>
    <string name="txt_inputpassword">Input your password</string>
    <string name="txt_forgot">Forgot Password</string>
    <string name="btn_login1">Login</string>
    <string name="create_account">Dont Have Account?<font color="#00008b"><b> Register</b></font></string>
    <string name="registe_confirm_password">Confirm Your Password</string>
    <string name="txt_confirmpass">Your Passsword</string>
    <string name="btn_register">Register</string>
    <string name="register_title">Create New Account</string>
    <string name="register_sub_title"><font color="#00008b"><b>Register</b></font> to get started with the app.
    </string>
    <string name="register_fullname">Nama Lengkap</string>
    <string name="register_email">Email Kamu</string>
    <string name="register_username">Username</string>
    <string name="login">i Have Account?<font color="#00008b"><b> Login</b></font></string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="find_your_email">Find Your Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="back_to_login">Back to <font color="#00008b"><b> Login</b></font></string>
    <string name="email_address">Email address</string>
    <string name="nama_profile">Nama Lengkap</string>
    <string name="email_profile">Email Kamu</string>
    <string name="username">Nama Kelas</string>
    <string name="resul_namalengkap">Rifqi Luthfi Athallah</string>
    <string name="resul_kelas">BB</string>
    <string name="resul_email">rifqila245@gmail.com</string>
    <string name="txt_nextt">Next</string>
    <string name="txt_btnedit">Change Profile</string>
    <string name="txt_matkul">MataKuliah</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>