<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@color/biruelektrik">

    <TextView
        android:id="@+id/tit_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        style="@style/TextAppearance.MaterialComponents.Headline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/findyour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_your_email"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:padding="10dp"
        style="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintTop_toBottomOf="@+id/tit_forget"/>

    <TextView
        android:id="@+id/enteryour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email"
        android:textColor="@color/almostblack"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/findyour" />

    <EditText
        android:id="@+id/et_email3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:ems="5"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enteryour"
        android:autofillHints="emailAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next2"
        style="@style/ButtonPink"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_nextt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email3" />

    <TextView
        android:id="@+id/backlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/back_to_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next2" />

</androidx.constraintlayout.widget.ConstraintLayout>