<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/biruelektrik"
    tools:context=".fProfile">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/biruelektrik"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <ImageView
            android:id="@+id/profile_1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="15dp"
            android:src="@drawable/profile1"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nama_profile"
            style="@style/TectInputLayout"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/nama_profile"
            app:startIconDrawable="@drawable/ic_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nama2_profile"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_profile"
            style="@style/TectInputLayout"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="270dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/email_profile"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email2_profile"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/no_profile"
            style="@style/TectInputLayout"
            android:orientation="horizontal"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="340dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/kelas">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/no2_profile"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/matkul"
            style="@style/TectInputLayout"
            android:orientation="horizontal"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="410dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/txt_matkul"
            app:startIconDrawable="@drawable/matkul">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/matkul2"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>